src/test/ui/borrowck/issue-93093.stderr
error[E0594]: cannot assign to `self.foo`, which is behind a `&` reference
  --> $DIR/issue-93093.rs:8:9
   |
LL |     async fn bar(&self) {
   |                  ----- help: consider changing this to be a mutable reference: `&mut self`
LL |
LL |         self.foo += 1;
   |         ^^^^^^^^^^^^^ `self` is a `&` reference, so the data it refers to cannot be written

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
